fix: change .discuss to .solutions

--- a/src/code.tmpl
+++ b/src/code.tmpl
@@ -1,8 +1,9 @@
 __COMMENT_PREFIX___
 __COMMENT_LEADING__ [__PROBLEM_ID__] __PROBLEM_TITLE__
+__COMMENT_LEADING__ __PROBLEM_LEVEL__ / __PROBLEM_PERCENT__ / __PROBLEM_CATEGORY__
+__COMMENT_LEADING__ 
 __COMMENT_LEADING__ Link: __PROBLEM_LINK__
-__COMMENT_LEADING__ Discuss: __DISCUSS_LINK__
-__COMMENT_LEADING__ __PROBLEM_CATEGORY__ / __PROBLEM_LEVEL__ / __PROBLEM_PERCENT__
+__COMMENT_LEADING__ Solutions: __DISCUSS_LINK__
 __COMMENT_LEADING__ 
 __COMMENT_LEADING__ __PROBLEM_DESC__
 __COMMENT_SUFFIX___
